[package]
name = "jgsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
xlsxwriter = "0.6.0"

[build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
