[package]
name = "jgsm"
version = "0.3.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
crossterm = "0.27.0"
fantoccini = "0.19.3"
itertools = "0.12.1"
regex = "1.10.4"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
tokio = { version = "1.36.0", features = ["full"] }
xlsxwriter = "0.6.0"

[build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
